# Friend

./: CMakeLists.txt  README.md  main.cpp
interfejs/: Intr2.cpp  Intr2.h
narzedzia/: regex.cpp  regex.h  utils.cpp  utils.h
znajomy/: Ksiazka.cpp  Ksiazka.h  Osoba.cpp  Osoba.h  wypozyczenie.h
